[package]
name = "pizza-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-web-httpauth = "0.8.1"
dotenv = "0.15.0"
reqwest = "0.11.22"
serde = { version = "1.0.193", features = ["derive"] }
